# Murphy

./: .env.example  .gitignore  README.md  pyproject.toml  setup.bat  setup.sh  start_project.bat
agents/: README.md  communicator.yaml  communicator_guide.md  detective.yaml  detective_test.yaml  learning.yaml  metrics_template.md
agents/templates/: message_templates.md
mcp-servers/github-server/: README.md  pyproject.toml
mcp-servers/github-server/src/github_server/: client.py  models.py  server.py
mcp-servers/monitoring-server/: README.md  pyproject.toml
mcp-servers/monitoring-server/src/monitoring_server/: models.py  server.py  simulator.py
mcp-servers/slack-server/: .env.example  README.md  pyproject.toml
mcp-servers/slack-server/src/slack_server/: client.py  server.py  types.py
ui/: README.md  config.py  dashboard.py
workflows/: README.md  incident_response.yaml  incident_response_test.yaml
