[project]
name = "intelligent-incident-response"
version = "0.1.0"
description = "Intelligent Incident Response system (MCP + Archestra.AI + Streamlit)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hackathon Team" }]

dependencies = [
  # UI
  "streamlit>=1.31",

  # Config / validation
  "pydantic>=2.6",
  "python-dotenv>=1.0",

  # HTTP clients (Archestra.AI + APIs)
  "httpx>=0.27",

  # CLI / logging
  "typer>=0.12",
  "rich>=13.7",

  # MCP SDK (Python). If your chosen MCP SDK package name differs, adjust here.
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"
